[workspace]
resolver = "2"

members = [
    # "net/rtp",
    # "net/rtsp",
    # "net/webrtchttp",
    "net/webrtc",
    "net/webrtc/protocol",
    "net/webrtc/signalling",
]

# Only plugins without external dependencies
default-members = [
    # "net/rtp",
    # "net/rtsp",
    # "net/webrtchttp",
    "net/webrtc",
    "net/webrtc/protocol",
    "net/webrtc/signalling",
]

[profile.release]
lto = true
opt-level = 3
debug = true
panic = 'unwind'

[profile.dev]
opt-level = 1
lto = "off"

[workspace.package]
version = "0.13.3"
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
edition = "2021"
rust-version = "1.71"

[workspace.dependencies]
once_cell = "1"
glib = "0.20.10"
gst = { package = "gstreamer", version = "0.23.3", features = ["v1_22"] }
gst-allocators = { package = "gstreamer-allocators", version = "0.23.3", features = ["v1_22"] }
gst-app = { package = "gstreamer-app", version = "0.23.3", features = ["v1_22"] }
gst-audio = { package = "gstreamer-audio", version = "0.23.3" }
gst-base = { package = "gstreamer-base", version = "0.23.3" }
gst-check = { package = "gstreamer-check", version = "0.23.2" }
gst-net = { package = "gstreamer-net", version = "0.23", features = ["v1_22"] }
gst-plugin-version-helper = { path="./version-helper", version = "0.8" }
gst-rtp = { package = "gstreamer-rtp", version = "0.23", features = ["v1_22"] }
gst-sdp = { package = "gstreamer-sdp", version = "0.23", features = ["v1_22"] }
gst-utils = { package = "gstreamer-utils", version = "0.23.3" }
gst-video = { package = "gstreamer-video", version = "0.23.3" }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.23", features = [ "v1_22",] }
